<resources>
    <string name="app_name">FrontStudy</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="go_to_twitter">go_to_twitter</string>
    <string name="go_to_facebook">go_to_facebook</string>
    <string name="background">background</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_with_facebook_or_twitter">Sign in with Facebook or Twitter</string>
    <string name="agree_to_the_terms_conditions"><![CDATA[Agree to the Terms & Conditions]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="foto_placeholder">foto placeholder</string>
    <string name="title">Title</string>
    <string name="subtitle">subtitle</string>
    <string name="img">img</string>
    <string name="price">$</string>
    <string name="test">Test</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="facebook">Facebook</string>
    <string name="name">Name</string>
    <string name="twitter">Twitter</string>
    <string name="BatName">Batman Supermenov</string>
    <string name="BatLocation">1007 Mountain Drive, Gotham, New Jersey, USA</string>
    <string name="BatMail">SuperBat@gmail.com</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_0">0</string>
    <string name="quantity">Quantity</string>
    <string name="total_cost">Total cost:</string>
    <string name="base_description">Here you can put description of your wonderful, tasty and healthy product made by craftsman hands</string>
    <string name="cart">Cart</string>
    <string name="add_to_favorites">add_to_favorites</string>
    <string name="proceed_to_payment">Proceed to payment</string>
</resources>