<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/HomeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/home_background" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/btn_background_wide"
        android:text="@string/log_in"
        android:textColor="#F3EFEF"
        android:textSize="18sp"
        app:backgroundTintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Register"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/btn_background_wide"
        android:text="@string/register"
        android:textColor="#F6F4F4"
        android:textSize="18sp"
        app:backgroundTintMode="src_over"
        app:iconTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LogIn" />

    <LinearLayout
        android:id="@+id/menu_positions_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="#0D9F67"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Menu"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textColor="#F8F6F6"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Favorites"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/favorites"
            android:textColor="#F8F6F6"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Shop"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/shop"
            android:textColor="#F8F6F6"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="#F8F6F6"
            android:textSize="22sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>