<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/register_fields_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/TermsCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Full_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#070707"
            android:textColorHint="#918888"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#070707"
            android:textColorHint="#918888"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#070707"
            android:textColorHint="#918888"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Confirm_Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#070707"
            android:textColorHint="#918888"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/TermsCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/basic_green_button"
        android:text="@string/sign_up"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/TermsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="13dp"
        android:checked="true"
        android:contentDescription="@string/agree_to_the_terms_conditions"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/foto_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/foto_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/register_fields_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto_placeholder_img"
        tools:srcCompat="@drawable/foto_placeholder_img" />

    <TextView
        android:id="@+id/Terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/agree_to_the_terms_conditions"
        android:textColor="#918888"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintStart_toEndOf="@+id/TermsCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>