<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_positions_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="250dp" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="312dp" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twitter"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="366dp" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notifications"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="428dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_positions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_positions_name"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <TextView
            android:id="@+id/user_name_string"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/test"
            android:textAlignment="viewEnd"
            tools:ignore="RtlCompat"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/user_email_string"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/test"
            android:textAlignment="viewEnd"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/user_location_string"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/test"
            android:textAlignment="viewEnd"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="250dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/twitter_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="312dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/facebook_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="366dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="428dp" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>